--- a/sensors.yaml
+++ b/sensors.yaml
@@ -7,6 +7,8 @@
  - platform: time_date
    display_options:
      - 'time'
+     
+ - platform: fritzbox_netmonitor
       
  - platform: template
    sensors:
