--- a/customize.yaml
+++ b/customize.yaml
@@ -26,7 +26,9 @@ light.led_fernseher:
   friendly_name: Fernseher
 light.led_schlafzimmerschrank:
   friendly_name: Schlafzimmerschrank
-climate.heizung_bad_heating_1:
+climate.oeq0856177:
+  friendly_name: Küche
+climate.oeq0854702:
   friendly_name: Bad
 climate.meq1571948:
   friendly_name: Wohnzimmer
