--- a/script/turn_on.yaml
+++ b/script/turn_on.yaml
@@ -88,7 +88,7 @@ aufstehen:
         temperature: 23
     - service: climate.set_temperature
       data:
-        entity_id: climate.heizung_bad_heating_1
+        entity_id: climate.oeq0854702
         temperature: 24
     - service: switch.turn_on
       data:
@@ -119,7 +119,7 @@ aufstehen:
         minutes: 15
     - service: climate.set_temperature
       data:
-        entity_id: climate.heizung_bad_heating_1
+        entity_id: climate.oeq0854702
         temperature: 21
         
 schlafen:
@@ -159,7 +159,7 @@ schlafen:
         temperature: 21
     - service: climate.set_temperature
       data:
-        entity_id: climate.heizung_bad_heating_1
+        entity_id: climate.oeq0854702
         temperature: 21
 
 
